[tool.poetry]
name = "meadstats-api"
version = "0.1.0"
description = ""
authors = ["Fredrik Bore <fredrik@bore.ai>"]
readme = "README.md"
packages = [{include = "meadstats_api"}]

[tool.poetry.dependencies]
python = "^3.11"
eventlet = "==0.27.0"
flask-marshmallow = "==0.13.0"
gunicorn = "==20.0.4"
marshmallow = "==3.7.1"
marshmallow-sqlalchemy = "==0.23.1"
psycopg2 = "==2.8.6"
pycountry = "==20.7.3"
python-dotenv = "==0.14.0"
requests = "==2.24.0"
Flask = "==1.1.2"
Flask-Cors = "==3.0.9"
Flask-JWT-Extended = "==3.24.1"
Flask-Migrate = "==2.5.3"
Flask-Script = "==2.0.6"
Flask-SocketIO = "==4.3.1"
Flask-SQLAlchemy = "==2.4.4"
pyOpenSSL = "==19.1.0"


[tool.poetry.group.dev.dependencies]
pylint = "*"
black = "*"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
