[tool.poetry]
    authors = [
        "Fredrik Bore <fredrik@bore.ai>",
    ]
    description = ""
    name = "meadstatsapi"
    readme = "README.md"
    version = "0.1.0"

    [tool.poetry.dependencies]
        Flask                  = "^2.3.2"
        Flask-Cors             = "^3.0.10"
        Flask-JWT-Extended     = "^4.5.2"
        Flask-Migrate          = "^4.0.5"
        Flask-SQLAlchemy       = "^3.0.5"
        Flask-SocketIO         = "^5.3.4"
        eventlet               = "^0.33.3"
        flask-marshmallow      = "^0.15.0"
        gunicorn               = "^20.1.0"
        marshmallow            = "^3.19.0"
        marshmallow-sqlalchemy = "^0.29.0"
        psycopg2-binary        = "^2.9.6"
        pyOpenSSL              = "^23.2.0"
        pycountry              = "^22.3.5"
        python                 = "^3.11"
        python-dotenv          = "^1.0.0"
        requests               = "^2.31.0"


    [tool.poetry.group.dev.dependencies]
        black  = "^23.3.0"
        pylint = "^2.17.4"

[tool.poetry.scripts]
    meadstatsapi = "meadstatsapi.app:main"
[build-system]
    build-backend = "poetry.core.masonry.api"
    requires = [
        "poetry-core",
    ]
